# blog

./: .gitignore  README.md
backend/: .gitgnore  alembic.ini  env.example  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 021b3323dcdb_add_foreignkey_to_profile_user_id.py  1bad9eafe6eb_initial_migration_users_posts_projects_.py  947c17daa5cf_initial_migration_users_posts_projects_.py  d42b376acf81_add_profile_api_tables_if_not_exists.py
backend/apis/: __init__.py  base.py
backend/apis/auth/: controller.py  models.py  schema.py  views.py
backend/apis/base/: route.py
backend/apis/base/auth/: controller.py  schema.py  views.py
backend/apis/base/post/: controller.py  schema.py  views.py
backend/apis/dashboard/: controller.py  schema.py  views.py
backend/apis/posts/: controller.py  models.py  schema.py  views.py
backend/apis/profile/: controller.py  models.py  schema.py  views.py
backend/apis/project/: controller.py  models.py  schema.py  views.py
backend/apis/tag/: modesl.py
backend/app/account/: router.py
backend/app/account/v1/: router.py
backend/app/account/v1/contorller/: user.py
backend/app/account/v1/models/: user.py
backend/app/account/v1/schema/: user.py
backend/app/account/v1/views/: user.py
backend/common/: config.py  tags.py  utils.py  verify.py
backend/database/: engine.py  manage.py  setting.py
backend/databases/: connection.py
backend/models/: post.py  user.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
(+32 files in other folders)
